--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h1>Hello World!</h1>
-<app-students></app-students>
+<h1>{{title}}</h1>
+<nav>
+    <a routerLink="/students">Show students</a>
+</nav>
+<router-outlet></router-outlet>
+<!-- <app-students></app-students> -->
