--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <h1>{{title}}</h1>
 <nav>
     <a routerLink="/students">Show students</a>
+    &nbsp;&nbsp;&nbsp;&nbsp;
+    <a routerLink="/employees">Show employees</a>
 </nav>
 <router-outlet></router-outlet>
 <!-- <app-students></app-students> -->
